--- a/regression.ipynb
+++ b/regression.ipynb
@@ -1071,11 +1071,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing[\"income_cat\"]=pd.cut(housing[\"median_income\"],bins=[0.,1.5,3.0,4.5,6.,np.inf],labels=[1,2,3,4,5])\n"
+    "housing[\"income_cat\"]=pd.cut(housing[\"median_income\"],bins=[0.,1.5,3.0,4.5,6.,np.inf],labels=[1,2,3,4,5])"
    ]
   },
   {
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
     "for train_index,test_index in splitter.split(housing,housing[\"income_cat\"]):\n",
     "    strat_train_set_n=housing.iloc[train_index]\n",
     "    strat_test_set_n=housing.iloc[test_index]\n",
-    "    strat_splits.append([strat_train_set_n,strat_test_set_n])\n"
+    "    strat_splits.append([strat_train_set_n,strat_test_set_n])"
    ]
   },
   {
@@ -2747,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2764,7 +2764,7 @@
     }
    ],
    "source": [
-    "cat_encoder.transform(df_test)\n"
+    "cat_encoder.transform(df_test)"
    ]
   },
   {
@@ -2867,7 +2867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2884,12 +2884,12 @@
    ],
    "source": [
     "cat_encoder.handle_unknown=\"ignore\"\n",
-    "cat_encoder.transform(df_test_unknown)\n"
+    "cat_encoder.transform(df_test_unknown)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
     }
    ],
    "source": [
-    "cat_encoder.feature_names_in_\n"
+    "cat_encoder.feature_names_in_"
    ]
   },
   {
@@ -3366,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3390,8 +3390,7 @@
     "        assert self.n_features_in_ == X.shape[1]\n",
     "        if self.with_mean:\n",
     "            X = X-self.mean_\n",
-    "        return X/self.scale_\n",
-    "\n"
+    "        return X/self.scale_"
    ]
   },
   {
@@ -3454,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3496,7 +3495,7 @@
     "plt.colorbar(scatter, label=\"Max Cluster Similarity\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
